atualização do environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -38,4 +38,9 @@ dependencies:
   - wheel=0.40.0
   - xz=5.2.10
   - pip:
-      - unidecode==1.3.6
+    - altgraph==0.17.3
+    - pefile==2023.2.7
+    - pyinstaller==5.10.1
+    - pyinstaller-hooks-contrib==2023.2
+    - pywin32-ctypes==0.2.0
+    - unidecode==1.3.6
